# ckb-cli

./: Cargo.toml
ckb-signer/: Cargo.toml
plugin-protocol/: Cargo.toml
src/subcommands/deploy/: state_change.rs
src/utils/: other.rs
test/: Cargo.toml
