[package]
name = "ckb-cli"
version = "1.9.0"
license = "MIT"
authors = [
    "Linfeng Qian <thewawar@gmail.com>",
    "Nervos Core Dev <dev@nervos.org>",
]
edition = "2021"
description = "ckb command line interface"

[dependencies]
ckb-jsonrpc-types = { package = "ckb-jsonrpc-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-hash = { package = "ckb-hash", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-crypto = { package = "ckb-crypto", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain", features = ["secp"] }
ckb-build-info = { package = "ckb-build-info", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-types = { package = "ckb-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-util = { package = "ckb-util", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-error = { package = "ckb-error", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-script = { package = "ckb-script", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-chain-spec = { package = "ckb-chain-spec", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-sdk = { git = "https://github.com/ethanyuan/ckb-sdk-rust", branch = "v3.2.1-branch-chain", features = ["native-tls-vendored"] }
ckb-mock-tx-types = { package = "ckb-mock-tx-types", git = "https://github.com/ethanyuan/ckb-standalone-debugger", branch = "v0.116.1-branch-chain" }
ckb-signer = { path = "ckb-signer", version = "0.4.1" }
plugin-protocol = { path = "plugin-protocol", package = "ckb-cli-plugin-protocol", version = "=1.3.1" }
jsonrpc-core-client = "18"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
jsonrpc-server-utils = "18"
secp256k1 = { version = "0.24", features = ["recovery"] }
bitcoin = "0.29"
faster-hex = "0.6"
env_logger = "0.6"
crossbeam-channel = "0.5.8"
clap = "=3.0.0-beta.1"
clap_generate = "=3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.23"
yaml-rust = "0.4.3"
dtoa = "0.4"
ansi_term = "^0.11.0"
colored = "^1.6.0"
atty = "^0.2.10"
anyhow = "1.0.63"
console = "0.15.0"
ctrlc = "3.2.3"
rustyline = "~8.0.0"
rustyline-derive = "0.4.0"
shell-words = "0.1.0"
eaglesong = "0.1"
regex = "1.1.6"
dirs = "1.0.5"
url = "1.7.2"
log = "0.4.6"
chrono = "0.4"
rpassword = "3.0.2"
ipnetwork = "0.14"
multiaddr = { package = "parity-multiaddr", version = "0.4.0" }
byteorder = "1.3.2"
toml = "0.5.9"

tokio = { version = "1", features = ["net", "io-util", "rt"] }
futures = "0.3"

# remove this line when ckb-vm stick the version of ckb-vm-definitions
# ckb-vm-definitions = "=0.21.3"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[dev-dependencies]
rand = "0.7"

[build-dependencies]
ckb-build-info = { package = "ckb-build-info", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }

[workspace]
members = ["ckb-signer", "plugin-protocol"]
