[package]
name = "ckb-cli-test"
version = "1.0.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.4.18" }
tempfile = "3.0"
log = "0.4"
env_logger = "0.6"
toml = "0.5.0"
serde_yaml = "0.8.9"
ckb-sdk = { git = "https://github.com/ethanyuan/ckb-sdk-rust", branch = "v3.2.1-branch-chain", features = ["native-tls-vendored"] }
serde_json = "1.0"
ckb-types = { package = "ckb-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-jsonrpc-types = { package = "ckb-jsonrpc-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-app-config = { package = "ckb-app-config", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-chain-spec = { package = "ckb-chain-spec", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
regex = "1.1.6"
faster-hex = "0.6"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
